# SystemC_Processor

src/: ALU.cpp  ALU.h  ALU_testbench.cpp  Adder.cpp  Adder.h  Adder_testbench.cpp  CMakeLists.txt  Controller.cpp  Controller.h  Controller_testbench.cpp  DataMemory.cpp  DataMemory.h  DataMemory_testbench.cpp  Datapath.cpp  Datapath.h  Ffc.cpp  Ffc.h  Ffc_testbench.cpp  InstructionMemory.cpp  InstructionMemory.h  InstructionMemory_testbench.cpp  Mux.cpp  Mux.h  Mux_testbench.cpp  Processor.h  Register.cpp  Register.h  RegisterFile.cpp  RegisterFile.h  RegisterFile_testbench.cpp  Register_testbench.cpp  Stack.cpp  Stack.h  Stack_testbench.cpp  TopLevel.cpp  TopLevel.h  main.cpp
